hphp/test/zend/good/tests/classes/ctor_visibility.php.expectf
Derived::__construct()
Test::__construct()
TestPriv::__construct()
DerivedPriv::__construct()

Fatal error: Call to private method TestPriv::__construct() from context 'DerivedPriv' in %s/ctor_visibility.php on line 43
